[package]
name = "lsm1"
version = "0.2.0"
authors = ["Bryan Woods <github.com/bwoods>"]
edition = "2021"

license = "MIT OR Apache-2.0"

[dependencies]
lsm_ext = { package = "lsm_extension", path = "dep" }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0"
itertools = "0.11"
temp-file = "0.1.7"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
#debug = true

[profile.deployment]
inherits = "release"
codegen-units = 1
incremental = false
strip = true
lto = "fat"
